--- a/apps/@www/app/src/pages/blog/competence-as-tragedy.mdx
+++ b/apps/@www/app/src/pages/blog/competence-as-tragedy.mdx
@@ -24,8 +24,6 @@ John Grady rides south into Mexico searching for a world that still values what 
 
 McCarthy doesn't mock him for this. That's what makes the book devastating. John Grady isn't a fool or a luddite. He's right that his way of being in the world is beautiful. He's right that something is being lost. He still can't stop it from disappearing.
 
----
-
 I've been thinking about John Grady a lot lately.
 
 I'm fifteen years into a career built around craft. Not just writing code—developing the kind of judgment that lets you look at a system and know where it will fail. The intuition that lives in the space between decisions. The stuff that can't be documented because it's not knowledge exactly, it's taste, refined through repetition and mistakes.
@@ -38,13 +36,11 @@ John Grady's gift wasn't just riding horses. It was a whole mode of attention. P
 
 Is that what's happening to the craft of writing code? I guess I don't know. Nobody knows. That's part of what makes this moment so disorienting—we're living through a transition whose destination is illegible.
 
----
-
 What I keep coming back to is McCarthy's refusal to offer John Grady an easy out. He doesn't get to be right and win. He doesn't get to reject modernity and find some pastoral sanctuary where his skills still matter. He just gets to be good at something beautiful while the world moves on without him.
 
 There's a question buried in that: what does it mean to keep practicing a craft you love when you suspect it's dying?
 
-The honest answer is that I'm not sure. The skills might be depreciating, but the attention—the way of seeing systems, the pleasure of making something work—that's not separable from who I am. I didn't become an engineer because the market demanded it. I became one because my brain works this way, because I like the puzzle, because there's something satisfying about building things that function.
+The skills might be depreciating, but the attention—the way of seeing systems, the pleasure of making something work—that's not separable from who I am. I didn't become an engineer because the market demanded it. I became one because my brain works this way, because I like the puzzle, because there's something satisfying about building things that function.
 
 Maybe that's enough. Maybe it's denial. McCarthy doesn't tell us which.
 
