--- a/apps/@www/app/src/pages/blog/competence-as-tragedy.mdx
+++ b/apps/@www/app/src/pages/blog/competence-as-tragedy.mdx
@@ -12,21 +12,23 @@ The power went out on the first night of the storm. Ninety-mile-an-hour winds of
 
 In the morning the world was felled branches and standing water. I started reading McCarthy.
 
-I'd put him off for years—he's one of those authors everyone insists you have to read, which is usually enough to send me wandering in the opposite direction. I prefer stumbling into authors rather than being assigned them. But my wife had gifted me *All the Pretty Horses*, and four days without power felt like the right time. I read it in a single sitting. Then *The Crossing*. Then *The Road*.
+I'd put him off for years. He's one of those authors everyone insists you have to read, which is usually enough to send me wandering in the opposite direction. I prefer stumbling into authors rather than being assigned them. But my wife had gifted me *All the Pretty Horses*, and four days without power felt like the right time. I read it in a single sitting. Then *The Crossing*. Then *The Road*.
 
 What stayed with me most was John Grady Cole.
 
-He's sixteen when the novel opens, and he already possesses something rare: a preternatural understanding of horses. Not just how to ride them—how to be with them. He can gentle a wild horse in ways that seem like magic but are really the accumulation of attention, patience, and countless hours of physical practice. He's a craftsman.
+He's sixteen when the novel opens, and he already possesses something rare: a preternatural understanding of horses. Not just how to ride them, but how to be with them. He can gentle a wild horse in ways that seem like magic but are really the accumulation of attention, patience, and countless hours of physical practice. He's a craftsman.
 
 And none of it saves him.
 
-John Grady rides south into Mexico searching for a world that still values what he knows. He finds it, briefly—a hacienda with a herd worth his talents, a woman worth his love. But the world he's looking for is already gone. Maybe it never existed. The truck has already replaced the horse. The border has already hardened. His competence is irrelevant to the forces that will undo him: laws, violence, modernity, other people's choices. He does everything right, and it doesn't matter.
+John Grady rides south into Mexico searching for a world that still values what he knows. He finds it, briefly. A hacienda with a herd worth his talents, a woman worth his love. But the world he's looking for is already gone. Maybe it never existed. The truck has already replaced the horse. The border has already hardened. His competence is irrelevant to the forces that will undo him: laws, violence, modernity, other people's choices. He does everything right, and it doesn't matter.
 
 McCarthy doesn't mock him for this. That's what makes the book devastating. John Grady isn't a fool or a luddite. He's right that his way of being in the world is beautiful. He's right that something is being lost. He still can't stop it from disappearing.
 
+---
+
 I've been thinking about John Grady a lot lately.
 
-I'm fifteen years into a career built around craft. Not just writing code—developing the kind of judgment that lets you look at a system and know where it will fail. The intuition that lives in the space between decisions. The stuff that can't be documented because it's not knowledge exactly, it's taste, refined through repetition and mistakes.
+I'm fifteen years into a career built around craft. Not just writing code, but developing the kind of judgment that lets you look at a system and know where it will fail. The intuition that lives in the space between decisions. The stuff that can't be documented because it's not knowledge exactly, it's taste, refined through repetition and mistakes.
 
 And I'm watching that craft enter a strange twilight.
 
@@ -34,13 +36,15 @@ AI is getting better. Not good enough to replace me today, but damn close, and t
 
 John Grady's gift wasn't just riding horses. It was a whole mode of attention. Patient, physical, present. The truck doesn't just replace the horse; it makes that way of being in the world unnecessary. You don't need to feel an engine the way you feel a horse beneath you.
 
-Is that what's happening to the craft of writing code? I guess I don't know. Nobody knows. That's part of what makes this moment so disorienting—we're living through a transition whose destination is illegible.
+Is that what's happening to the craft of writing code? I guess I don't know. Nobody knows. That's part of what makes this moment so disorienting. We're living through a transition whose destination is illegible.
+
+---
 
 What I keep coming back to is McCarthy's refusal to offer John Grady an easy out. He doesn't get to be right and win. He doesn't get to reject modernity and find some pastoral sanctuary where his skills still matter. He just gets to be good at something beautiful while the world moves on without him.
 
 There's a question buried in that: what does it mean to keep practicing a craft you love when you suspect it's dying?
 
-The skills might be depreciating, but the attention—the way of seeing systems, the pleasure of making something work—that's not separable from who I am. I didn't become an engineer because the market demanded it. I became one because my brain works this way, because I like the puzzle, because there's something satisfying about building things that function.
+The skills might be depreciating, but the attention, the way of seeing systems, the pleasure of making something work, that's not separable from who I am. I didn't become an engineer because the market demanded it. I became one because my brain works this way, because I like the puzzle, because there's something satisfying about building things that function.
 
 Maybe that's enough. Maybe it's denial. McCarthy doesn't tell us which.
 
