edit: comptenece as tragedy, middle section

--- a/apps/@www/app/src/pages/blog/competence-as-tragedy.mdx
+++ b/apps/@www/app/src/pages/blog/competence-as-tragedy.mdx
@@ -28,15 +28,15 @@ McCarthy doesn't mock him for this. That's what makes the book devastating. John
 
 I've been thinking about John Grady a lot lately.
 
-I'm fifteen years into a career built around craft. Not just writing code, but developing the kind of judgment that lets you look at a system and know where it will fail. The intuition that lives in the space between decisions. The stuff that can't be documented because it's not knowledge exactly, it's taste, refined through repetition and mistakes.
+I'm deep into a career built around craft. Not just writing code, but writing code that's beautiful—readable, elegant, delivering value without sacrificing clarity. A coworker I respected, when he left the company ten years ago, sent around his reflections. One line stayed with me: "Joe showed me that code can be beautiful." I don't know if I'd frame it that way myself. But I know the feeling he meant.
 
-And I'm watching that craft enter a strange twilight.
+And I'm watching that craft become obsolete in real time.
 
-AI is getting better. Not good enough to replace me today, but damn close, and the trajectory is clear. Code that used to take a day takes a few minutes. Problems that once required hard-won intuition now yield to brute-force context windows. The scarcity that made my skills valuable is evaporating in real time. 
+This week I asked Claude to refactor a module I'd been putting off. Tedious work, the kind that requires care but not insight. It took maybe thirty seconds. The code was clean. Not beautiful—but functional, readable, correct. The kind of work that used to be mine.
 
 John Grady's gift wasn't just riding horses. It was a whole mode of attention. Patient, physical, present. The truck doesn't just replace the horse; it makes that way of being in the world unnecessary. You don't need to feel an engine the way you feel a horse beneath you.
 
-Is that what's happening to the craft of writing code? I guess I don't know. Nobody knows. That's part of what makes this moment so disorienting. We're living through a transition whose destination is illegible.
+Is that what's happening? I guess I don't know.
 
 ---
 
@@ -50,6 +50,6 @@ Maybe that's enough. Maybe it's denial. McCarthy doesn't tell us which.
 
 He just shows us John Grady Cole riding north at the end of the novel, crossed by the shadows of the clouds, heading somewhere we never see.
 
-The power came back after 4 days. I finished the book, closed it, and walked outside to see what the storm had left behind.
+The power came back after four days. I walked outside. Branches everywhere, but the house still stood. We were alive.
 
 </MdxLayout>
